--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           root_file: gkthiruvathukal-cv.tex
       - name: Collate Bibliography
         run: |
-          cat bibliography/*.bib > gkthiruvathukal-cv.bib
+          find . -name '*.bib' -exec cat {} \; > gkthiruvathukal-cv.bib
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
