fix issue with list of files in release action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files:
-          - gkthiruvathukal-cv.bib
-          - gkthiruvathukal-cv.pdf
+          files: |
+            gkthiruvathukal-cv.bib
+            gkthiruvathukal-cv.pdf
