--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9.4'
+      - name: Upgrade pip
+        run: |
+          python3 -m pip install --upgrade pip
+      - name: Get pip cache dir
+        id: pip-cache
+        run: echo "::set-output name=dir::$(pip cache dir)"
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.pip-cache.outputs.dir }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Install dependencies
+        run: python3 -m pip install scholarly
       - name: Working directory check
         run: |
           pwd
@@ -25,6 +44,7 @@ jobs:
           bash gather.sh
           popd >& /dev/null
           cat bibliography/*.bib > gkthiruvathukal-cv.bib
+          python3 ./tools/scholarly-metrics.py
       - name: Build LaTeX Document
         uses: xu-cheng/latex-action@v2
         with:
