--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           bash gather.sh
           popd >& /dev/null
           cat bibliography/*.bib > gkthiruvathukal-cv.bib
-          python3 ./tools/scholarly-metrics.py --name "George K. Thiruvathukal"
+          python3 ./tools/scholarly-metrics.py --name "George K. Thiruvathukal" | yq -p json
           python3 ./tools/github-commits.py --username gkthiruvathukal --first-year 2015 --last-year 2022  --modern-cv
       - name: Build LaTeX Document
         uses: xu-cheng/latex-action@v2
