--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.13'
       - name: Upgrade pip
         run: |
           python3 -m pip install --upgrade pip
@@ -26,7 +26,7 @@ jobs:
         id: pip-cache
         run: echo "::set-output name=dir::$(pip cache dir)"
       - name: Cache dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: ${{ steps.pip-cache.outputs.dir }}
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
@@ -42,16 +42,17 @@ jobs:
         run: |
           ./pre-build.sh
       - name: Build LaTeX Document
-        uses: xu-cheng/latex-action@v2
+        uses: xu-cheng/latex-action@v3
         with:
           root_file: cv-main.tex
+          texlive_version: latest
       - name: Check for Resulting PDF and Collated Bibliography
         run: |
           mv cv-main.pdf ${{ github.repository_owner }}.pdf
           cat bibliography/*.bib > ${{ github.repository_owner }}.bib
           ls ${{ github.repository_owner }}.{pdf,bib}
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
