--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,11 +50,11 @@ jobs:
         run: |
           mv cv-main.pdf ${{ github.repository_owner }}.pdf
           cat bibliography/*.bib > ${{ github.repository_owner }}.bib
-          ls ${{ github.repository_owner }}.{pdf,bib}
+          zip -r ${{ github.repository_owner }}-bibs.zip bibliography/*.bib ${{ github.repository_owner }}.bib
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            ${{ github.repository_owner }}.bib
+            ${{ github.repository_owner }}-bibs.zip
             ${{ github.repository_owner }}.pdf
