--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,10 +55,12 @@ jobs:
       - name: Check for Resulting PDF and Collated Bibliography
         run: |
           cp cv-main.pdf ${{ github.repository_owner }}.pdf
-          mv cv-main.pdf ${{ github.repository_owner }}-${GITHUB_REF_NAME}.pdf
           cat bibliography/*.bib > ${{ github.repository_owner }}.bib
-          cat bibliography/*.bib > ${{ github.repository_owner }}-${GITHUB_REF_NAME}.bib
           zip -r ${{ github.repository_owner }}-bibs.zip bibliography/*.bib ${{ github.repository_owner }}.bib
+      - name: Show tag info
+        run: |
+          echo "Full ref: $GITHUB_REF"
+          echo "Tag name: $GITHUB_REF_NAME"
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
@@ -66,5 +68,4 @@ jobs:
           files: |
             ${{ github.repository_owner }}-bibs.zip
             ${{ github.repository_owner }}.pdf
-            ${{ github.repository_owner }}-${GITHUB_REF_NAME}.pdf
 
