yet another try

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Check for Resulting PDF and Collated Bibliography
         run: |
           cp cv-main.pdf ${{ github.repository_owner }}.pdf
-          cp cv-main.pdf ${{ github.repository_owner }}-${{ RELEASE_TAG_NAME }}}.pdf
+          cp cv-main.pdf ${{ github.repository_owner }}-${{ RELEASE_TAG_NAME }}.pdf
           cat bibliography/*.bib > ${{ github.repository_owner }}.bib
           zip -r ${{ github.repository_owner }}-bibs.zip bibliography/*.bib ${{ github.repository_owner }}.bib
       - name: Show tag info
